--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
 
 .nossosprods {
     text-align: center;
+    font-family: 'Inria Sans', sans-serif;
 }
 
 .menutop {
@@ -100,10 +101,12 @@ body {
 .produtos h4 {
     font-size: 18px;
     justify-content: center;
+    font-family: 'Inria Sans', sans-serif;
 }
 
 .produtos p {
     justify-content: center;
+    font-family: 'Inria Sans', sans-serif;
 }
 
 .imagemprod {
@@ -120,6 +123,7 @@ body {
     display: inline-block;
     font-size: 16px;
     border-radius: 16px;
+    font-family: 'Inria Sans', sans-serif;
 }
 
 .button:hover {
@@ -132,8 +136,13 @@ body {
     margin-right: 10px;
 }
 
-#contato {
+.socials:hover {
+    scale: 1.1;
+}
+
+.contato {
     text-align: center;
+    font-family: 'Inria Sans', sans-serif;
 }
 
 #form {
@@ -144,6 +153,18 @@ body {
     text-align: center;
 }
 
+.userlogin h2 {
+    font-family: 'Inria Sans', sans-serif;
+}
+
+.userlogin h3 {
+    font-family: 'Inria Sans', sans-serif;
+}
+
+.userlogin h4 {
+    font-family: 'Inria Sans', sans-serif;
+}
+
 .register {
     color: white;
     text-decoration: underline;
@@ -151,7 +172,6 @@ body {
 
 .register:hover {
     color: grey;
-    text-decoration: underline;
 }
 
 footer {
