--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,16 @@ body {
     font-family: 'Inria Sans', sans-serif;
 }
 
+.back {
+    font-family: 'Inria Sans', sans-serif;
+    text-decoration: underline;
+    color: white;
+}
+
+.back:hover {
+    color: gray;
+}
+
 .register {
     color: white;
     text-decoration: underline;
