--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@
 body {
     width: 100%;
     height: 100%;
-    background-color: white;
-
+    background-color: #121212
 }
 
 .cabecalho {
@@ -37,6 +36,7 @@ body {
 .nossosprods {
     text-align: center;
     font-family: 'Inria Sans', sans-serif;
+    color: white;
 }
 
 .menutop {
@@ -71,6 +71,8 @@ body {
     height: 480px;
     width: 600px;
     display: center;
+    color: white;
+    flex-wrap: wrap;
 }
 
 #produtoimg {
@@ -81,11 +83,12 @@ body {
 
 .listaprodutos {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
     align-items: center;
-    margin-top: 25px;
-    margin: 5%;
+    justify-content: space-between;
+    margin-top: 30px;
+    margin-right: 20px;
+    margin-left: 5px;
+    flex-wrap: wrap;
 }
 
 .produtos {
@@ -102,11 +105,13 @@ body {
     font-size: 18px;
     justify-content: center;
     font-family: 'Inria Sans', sans-serif;
+    color: white;
 }
 
 .produtos p {
     justify-content: center;
     font-family: 'Inria Sans', sans-serif;
+    color: white;
 }
 
 .imagemprod {
@@ -143,14 +148,17 @@ body {
 .contato {
     text-align: center;
     font-family: 'Inria Sans', sans-serif;
+    color: white;
 }
 
 #form {
     text-align: center;
+    color: white;
 }
 
 .userlogin {
     text-align: center;
+    color: white;
 }
 
 .userlogin h2 {
@@ -167,7 +175,7 @@ body {
 
 .back {
     font-family: 'Inria Sans', sans-serif;
-    text-decoration: underline;
+    text-decoration: none;
     color: white;
 }
 
@@ -176,8 +184,8 @@ body {
 }
 
 .register {
-    color: white;
     text-decoration: underline;
+    color: white;
 }
 
 .register:hover {
@@ -191,4 +199,5 @@ footer {
     font-family: 'Inria Sans', sans-serif;
     background-color: #0C0C0C;
     height: 140px;
+    color: white;
 }
