--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
     text-align: center;
 }
 
-#name {
+.name {
     color: red;
     background-color: #000569;
     font-size: 40px;
@@ -25,18 +25,8 @@ body {
     letter-spacing: 2px;
 }
 
-.menuham {
-    width: 35px;
-    height: 5px;
-    background-color: black;
-    margin: 6px 0;
-    margin-left: 12px;
-}
-
-.nossosprods {
-    text-align: center;
-    font-family: 'Inria Sans', sans-serif;
-    color: white;
+.barras {
+    display: none;
 }
 
 .menutop {
@@ -46,10 +36,14 @@ body {
     letter-spacing: 2px;
     padding-left: 10px;
     padding-right: 10px;
-
 }
 
-.menutop a {
+.menutop svg {
+    width: 30px;
+    fill: black;
+}
+
+.options {
     font-family: 'Inria Sans', sans-serif;
     color: white;
     text-decoration: none;
@@ -70,24 +64,24 @@ body {
     background-color: #000350;
     height: 480px;
     width: 600px;
-    display: center;
     color: white;
     flex-wrap: wrap;
+    margin-top: 15px;
 }
 
 #produtoimg {
-    margin: top;
     width: 600px;
-    display: center;
+}
+
+.nossosprods {
+    text-align: center;
+    font-family: 'Inria Sans', sans-serif;
+    color: white;
 }
 
 .listaprodutos {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin-top: 30px;
-    margin-right: 20px;
-    margin-left: 5px;
     flex-wrap: wrap;
 }
 
@@ -98,8 +92,24 @@ body {
 
 .produtos {
     width: 250px;
-    height: 460px;
+    height: 480px;
     margin-bottom: 32px;
+}
+
+.setores {
+    padding: 15px;
+}
+
+.card {
+    width: 452px;
+    background-color: #0C0C0C;
+    margin: 15px;
+}
+
+.secao_cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .imagemprod:hover {
@@ -111,12 +121,15 @@ body {
     justify-content: center;
     font-family: 'Inria Sans', sans-serif;
     color: white;
+    margin-left: 5px;
+    margin-top: 5px;
 }
 
 .produtos p {
     justify-content: center;
     font-family: 'Inria Sans', sans-serif;
     color: white;
+    margin-left: 5px;
 }
 
 .imagemprod {
@@ -134,10 +147,11 @@ body {
     font-size: 16px;
     border-radius: 16px;
     font-family: 'Inria Sans', sans-serif;
+    margin-left: 5px;
 }
 
 .button:hover {
-    scale: 1.1;
+    scale: 0.9;
 }
 
 .socials {
@@ -205,4 +219,27 @@ footer {
     background-color: #0C0C0C;
     height: 140px;
     color: white;
+}
+
+
+
+@media screen and (max-width: 600px) {
+    .name {
+        font-size: 30px;
+    }
+
+    .options {
+        font-size: 18px;
+
+    }
+}
+
+@media screen and (max-width: 370px) {
+    .options {
+        display: none;
+    }
+
+    .barras {
+        display: flex;
+    }
 }
