--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,21 @@ body {
 
 .barras {
     display: none;
+    width: 30px;
 }
 
 .menutop {
+    font-size: 28px;
     background-color: #000350;
     display: flex;
     justify-content: space-between;
+}
+
+.menutop a {
+    font-family: 'Inria Sans', sans-serif;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
     letter-spacing: 2px;
     padding-left: 10px;
     padding-right: 10px;
@@ -41,14 +50,6 @@ body {
 .menutop svg {
     width: 30px;
     fill: black;
-}
-
-.options {
-    font-family: 'Inria Sans', sans-serif;
-    color: white;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 28px;
 }
 
 .menutop a:hover {
@@ -69,7 +70,7 @@ body {
     margin-top: 15px;
 }
 
-#produtoimg {
+.produtoimg {
     width: 600px;
 }
 
@@ -126,6 +127,7 @@ body {
 }
 
 .produtos p {
+    font-size: 18px;
     justify-content: center;
     font-family: 'Inria Sans', sans-serif;
     color: white;
@@ -170,7 +172,7 @@ body {
     color: white;
 }
 
-#form {
+.form {
     text-align: center;
     color: white;
 }
@@ -219,6 +221,8 @@ footer {
     background-color: #0C0C0C;
     height: 140px;
     color: white;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -228,18 +232,157 @@ footer {
         font-size: 30px;
     }
 
-    .options {
+    .menutop {
         font-size: 18px;
 
+    }
+
+    .produto {
+        width: 100%;
+        height: 100%;
+    }
+
+    .produto h2 {
+        font-size: 30px;
+    }
+
+    .produto h3 {
+        font-size: 30px;
+    }
+
+    .produtos h4 {
+        font-size: 14px;
+    }
+    
+    .produtos p {
+        font-size: 14px;
+    }
+
+    .nossosprods h2 {
+        font-size: 18px;
+    }
+
+    .nossosprods h3 {
+        font-size: 18px;
+    }
+
+    .listaprodutos h2 {
+        font-size: 18px;
+    }
+
+    .produtoimg {
+        width: 100%;
+        height: 100%;
+    }
+
+    .imagemprod {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .secao_cards {
+        width: 100%;
+        height: 100%;
+    }
+
+    .card {
+        width: 100%;
+        height: 100%;
+    }
+
+    .button {
+        padding: 10px 24px;
+    }
+
+    .socials {
+        width: 24px;
+        border-radius: 8px;
+        margin-right: 10px;
+    }
+
+    footer {
+        font-size: 18px;
     }
 }
 
 @media screen and (max-width: 370px) {
-    .options {
+    .name {
+        font-size: 24px;
+    }
+    
+    .menutop {
         display: none;
+        flex-direction: column;
     }
 
     .barras {
         display: flex;
+    }
+
+    .produto {
+        width: 100%;
+        height: 100%;
+    }
+
+    .produto h2 {
+        font-size: 20px;
+    }
+
+    .produto h3 {
+        font-size: 20px;
+    }
+
+    .produtos h4 {
+        font-size: 12px;
+    }
+    
+    .produtos p {
+        font-size: 12px;
+    }
+
+    .nossosprods h2 {
+        font-size: 14px;
+    }
+
+    .nossosprods h3 {
+        font-size: 14px;
+    }
+
+    .listaprodutos h2 {
+        font-size: 14px;
+    }
+
+    .produtoimg {
+        width: 100%;
+        height: 100%;
+    }
+
+    .imagemprod {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .secao_cards {
+        width: 100%;
+        height: 100%;
+    }
+
+    .card {
+        width: 100%;
+        height: 100%;
+    }
+
+    .button {
+        padding: 8px 12px;
+    }
+
+    .socials {
+        width: 20px;
+        border-radius: 8px;
+        margin-right: 10px;
+    }
+
+    footer {
+        font-size: 14px;
     }
 }
