--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
     letter-spacing: 2px;
     padding-left: 10px;
     padding-right: 10px;
+    margin: 5px;
 }
 
 .menutop svg {
@@ -105,6 +106,7 @@ body {
     width: 452px;
     background-color: #0C0C0C;
     margin: 15px;
+    box-shadow: 0 0 30px #0C0C0C
 }
 
 .secao_cards {
@@ -305,7 +307,7 @@ footer {
     }
 }
 
-@media screen and (max-width: 388px) {
+@media screen and (max-width: 420px) {
     .name {
         font-size: 24px;
     }
@@ -313,6 +315,7 @@ footer {
     .menutop {
         display: none;
         flex-direction: column;
+        box-shadow: 0 5px 5px #000229;
     }
 
     .barras {
