--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,16 @@ body {
     width: 30px;
 }
 
+.menu-jquery {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 5px 5px #000229;
+}
+
+.menu-jquery-escondido {
+    display: none;
+}
+
 .menutop {
     font-size: 28px;
     background-color: #000350;
@@ -74,6 +84,18 @@ body {
 .produtoimg {
     width: 600px;
 }
+
+/* .produtoimg-xbox {
+    background-image: url(../img/xboxone.jpg);
+}
+
+.produtoimg-ps4 {
+    background-image: url(../img/ps4.jpg);
+}
+
+.produtoimg-note {
+    background-image: url(../img/notebookstart.jpg);
+} */
 
 .nossosprods {
     text-align: center;
@@ -255,7 +277,7 @@ footer {
     .produtos h4 {
         font-size: 14px;
     }
-    
+
     .produtos p {
         font-size: 14px;
     }
@@ -281,7 +303,7 @@ footer {
         width: 100%;
         height: 100%;
     }
-    
+
     .secao_cards {
         width: 100%;
         height: 100%;
@@ -311,7 +333,7 @@ footer {
     .name {
         font-size: 24px;
     }
-    
+
     .menutop {
         display: none;
         flex-direction: column;
@@ -338,7 +360,7 @@ footer {
     .produtos h4 {
         font-size: 12px;
     }
-    
+
     .produtos p {
         font-size: 12px;
     }
@@ -364,7 +386,7 @@ footer {
         width: 100%;
         height: 100%;
     }
-    
+
     .secao_cards {
         width: 100%;
         height: 100%;
