add input placeholder

--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,10 @@ body {
     color: white;
 }
 
+.form input {
+    border-radius: 10px;
+}
+
 .userlogin {
     text-align: center;
     color: white;
