--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ body {
 }
 
 .produtoimg-xbox {
-    background-position: 50% 50%;
+    background-position: center;
     height: 80%;
     background-image: url(../img/xboxone.jpg);
     background-size: 600px 480px;
@@ -95,7 +95,7 @@ body {
 }
 
 .produtoimg-ps4 {
-    background-position: 50% 50%;
+    background-position: center;
     height: 80%;
     background-image: url(../img/ps4.jpg);
     background-size: 600px 480px;
@@ -103,7 +103,7 @@ body {
 }
 
 .produtoimg-note {
-    background-position: 50% 50%;
+    background-position: center;
     height: 80%;
     background-image: url(../img/notebookstart.jpg);
     background-size: 600px 480px;
@@ -317,19 +317,19 @@ footer {
     }
 
     .produtoimg-xbox {
-        background-position: 50% 50%;
+        background-position: center;
         width: 100%;
         height: 380px;
     }
 
     .produtoimg-ps4 {
-        background-position: 50% 50%;
+        background-position: center;
         width: 100%;
         height: 380px;
     }
 
     .produtoimg-note {
-        background-position: 50% 50%;
+        background-position: center;
         width: 100%;
         height: 380px;
     }
@@ -418,19 +418,19 @@ footer {
     }
 
     .produtoimg-xbox {
-        background-position: 50% 50%;
+        background-position: center;
         width: 100%;
         height: 380px;
     }
 
     .produtoimg-ps4 {
-        background-position: 50% 50%;
+        background-position: center;
         width: 100%;
         height: 380px;
     }
 
     .produtoimg-note {
-        background-position: 50% 50%;
+        background-position: center;
         width: 100%;
         height: 380px;
     }
